# libappindicator-rs

./: .dockerignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.changes/: 15.md  appimage.md  bump-gtk-version.md  bump.md  config.json  fix-dynamic-linking.md  gtk-module.md  gtk018.md  libloading.md  license.md  sys-ver.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  covector-version-or-publish.yml
.tests/: Dockerfile  docker-compose.yml  hello-examples.sh
examples/: hello.rs  libappindicator-example.rs
src/: lib.rs
sys/: CHANGELOG.md  Cargo.toml  build.rs
sys/src/: lib.rs
