[package]
name = "libappindicator"
version = "0.8.0"
description = "Rust safe bindings for libappindicator"
edition = "2021"
license = "Apache-2.0 OR MIT"
keywords = [ "linux", "gui", "gtk" ]

[dependencies]
log = "0.4"
glib = "0.16"
gtk = "0.16"
gtk-sys = "0.16"
libappindicator-sys = { version = "0.7", path = "sys/" }

[features]
default = [ "backcompat" ]
backcompat = [ "libappindicator-sys/backcompat" ]
