[package]
name = "libappindicator-sys"
version = "0.9.0"
description = "Rust sys bindings for libappindicator"
license = "Apache-2.0 OR MIT"
keywords = [ "linux", "gui" ]
edition = "2018"
categories = [ "external-ffi-bindings" ]

[dependencies]
gtk-sys = "0.18"
libloading = "0.7"
once_cell = "1.12"

[features]
default = [ "backcompat" ]
backcompat = [ ]
